Bad host name in ChangeLog

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,4 +1,4 @@
-1999-08-15  Anthony Green  <green@trip>
+1999-08-15  Anthony Green  <green@cygnus.com>
 
 	* FAQ.html: Change egcs to GCC in a few places.
 	* gcj.html: Ditto.
