--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+1999-08-29  Anthony Green  <green@cygnus.com>
+
+	* index.html: 2.95.1 release.
+
 1999-08-15  Anthony Green  <green@cygnus.com>
 
 	* FAQ.html: Change egcs to GCC in a few places.
