--- a/htdocs/java/new/ChangeLog
+++ b/htdocs/java/new/ChangeLog
@@ -1,5 +1,12 @@
 1999-09-05  Anthony Green  <green@cygnus.com>
 
+	* index.html: Try server side include.
+	* tagline: Install default tagline
+
+	* about.html: Fix typo.
+
+1999-09-05  Anthony Green  <green@cygnus.com>
+
 	* mail.html: Add mailing list info.
 
 	* about.html: New file.
