--- a/htdocs/java/new/ChangeLog
+++ b/htdocs/java/new/ChangeLog
@@ -1,3 +1,13 @@
+1999-09-06  Anthony Green  <green@cygnus.com>
+
+	* thanks.html: First attempt at credit list.
+
+	* download.html: Add notes on how to download.
+
+	* index.html: Add java-announce subscription box.  
+
+	* All html files: Remove padding column to left of vertical bar.
+
 1999-09-05  Anthony Green  <green@cygnus.com>
 
 	* index.html: Try server side include.
