Add img values & footers.

--- a/htdocs/java/new/ChangeLog
+++ b/htdocs/java/new/ChangeLog
@@ -1,3 +1,10 @@
+1999-09-06  Anthony Green  <green@trip>
+
+	* All html files: Set alt, width and height values for logo.
+	Add footer.
+
+	* index.html: Fix spelling error.
+
 1999-09-06  Anthony Green  <green@cygnus.com>
 
 	* thanks.html: First attempt at credit list.
