Final rough draft.

--- a/htdocs/java/new/ChangeLog
+++ b/htdocs/java/new/ChangeLog
@@ -1,10 +1,12 @@
-1999-09-06  Anthony Green  <green@trip>
+1999-09-06  Anthony Green  <green@cygnus.com>
 
 	* All html files: Set alt, width and height values for logo.
 	Add footer.
 
 	* index.html: Fix spelling error.
 
+	* tagline: Remove.
+	
 1999-09-06  Anthony Green  <green@cygnus.com>
 
 	* thanks.html: First attempt at credit list.
