Fixes from tromey

--- a/htdocs/java/new/ChangeLog
+++ b/htdocs/java/new/ChangeLog
@@ -1,5 +1,11 @@
 1999-09-06  Anthony Green  <green@cygnus.com>
 
+	* faq.html: Point at the contrib page.
+
+	* download.html: Make cvs instructions smaller.
+
+1999-09-06  Anthony Green  <green@cygnus.com>
+
 	* All html files: Set alt, width and height values for logo.
 	Add footer.
 
