gcj.html and libgcj.html now refresh to the top level.  Everyone should be going there.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,13 @@
 1999-09-06  Anthony Green  <green@cygnus.com>
 
+	* gcj.html: Refresh to the top-level page.
+	* libgcj.html: Ditto.
+	* gcj2.html: New file (old gcj.html).
+	* libgcj2.html: New file (old libgcj.html).
+	* docs.html: Point at the old gcj and libgcj pages.
+
+1999-09-06  Anthony Green  <green@cygnus.com>
+
 	* faq.html: Point at the contrib page.
 
 	* download.html: Make cvs instructions smaller.
