--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+1999-10-01  Anthony Green  <green@cygnus.com>
+
+	* thanks.html: More thanks.
+
 1999-09-28  Warren Levy  <warrenl@cygnus.com>
 
 	* faq.html: Added sections, links and some new questions.
