--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+1999-10-12  Warren Levy  <warrenl@cygnus.com>
+
+	* faq.html (2_0 Build Issues): Added Q&A for infamous Solaris ld bug.
+
 1999-10-01  Anthony Green  <green@cygnus.com>
 
 	* thanks.html: More thanks.
