--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,10 +1,15 @@
-1999-10-12  Warren Levy  <warrenl@cygnus.com>
+1999-10-13  Warren Levy  <warrenl@cygnus.com>
+
+	* faq.html (2_1 Linker bug on Solaris): Added text of error msg.
+
+1999-10-13  Warren Levy  <warrenl@cygnus.com>
 
 	* faq.html: Updated link for faq to be relative instead of absolute.
 	* gcj2.html: Updated links for libgcj info from dead pages.
 
 1999-10-12  Warren Levy  <warrenl@cygnus.com>
 
+	* faq.html (2_0 Build Issues): Added Q&A for infamous Solaris ld bug.
 
 1999-10-01  Anthony Green  <green@cygnus.com>
 
