--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+1999-10-25  Warren Levy  <warrenl@cygnus.com>
+
+	* faq.html (2_1 Linker bug on Solaris): Use --with-ld.
+
 1999-10-13  Warren Levy  <warrenl@cygnus.com>
 
 	* faq.html (2_1 Linker bug on Solaris): Added text of error msg.
