--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+1999-11-04  Tom Tromey  <tromey@cygnus.com>
+
+	* port-threads.html: Reflect decisions regarding deprecated thread
+	functionality.
+
 1999-10-25  Warren Levy  <warrenl@cygnus.com>
 
 	* faq.html (2_1 Linker bug on Solaris): Use --with-ld.
