--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+Thu Dec  2 17:25:15 1999  Anthony Green  <green@cygnus.com>
+
+	* thanks.html: Giving credit where credit is due.
+
 1999-11-04  Tom Tromey  <tromey@cygnus.com>
 
 	* port-threads.html: Reflect decisions regarding deprecated thread
