--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+Wed Dec 22 09:35:32 1999  Anthony Green  <green@cygnus.com>
+
+	* faq.html: Bother -> Bothner.
+
 Thu Dec  2 17:25:15 1999  Anthony Green  <green@cygnus.com>
 
 	* thanks.html: Giving credit where credit is due.
