2000-01-05  Anthony Green  <green@cygnus.com>
	* faq.html: Add pointer to gdb snapshots.
	Reflection is supported.

2000-01-05  Joerg Brunsmann  <joerg.brusmann@FernUni-Hagen.de>

	* build-snapshot.html: New file.
	* faq.html: Many cleanups.

Wed Dec 22 13:12:06 1999  Glenn Chambers  (gchambers@provsol.com)

        * faq.html: Renumber section 5; fix minor typos; correct
	attribution of CNI examples; add JNI example reference.
	* cni-2.txt: Fix typo: this example is for version 2.96.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,19 @@
+2000-01-05  Anthony Green  <green@cygnus.com>
+
+	* faq.html: Add pointer to gdb snapshots.
+	Reflection is supported.
+
+2000-01-05  Joerg Brunsmann  <joerg.brusmann@FernUni-Hagen.de>
+
+	* build-snapshot.html: New file.
+	* faq.html: Many cleanups.
+
+Wed Dec 22 13:12:06 1999  Glenn Chambers  (gchambers@provsol.com)
+
+        * faq.html: Renumber section 5; fix minor typos; correct
+	attribution of CNI examples; add JNI example reference.
+	* cni-2.txt: Fix typo: this example is for version 2.96.
+
 Wed Dec 22 09:35:32 1999  Anthony Green  <green@cygnus.com>
 
 	* faq.html: Bother -> Bothner.
