* build-snapshot.html: Install gcc and gcj in the same place. 	Don't need to specify gc when building compiler.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-01-06  Anthony Green  <green@cygnus.com>
+	
+	* build-snapshot.html: Install gcc and gcj in the same place.
+	Don't need to specify gc when building compiler.
+
 2000-01-05  Anthony Green  <green@cygnus.com>
 
 	* faq.html: Add pointer to gdb snapshots.
