--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-01-06  Glenn Chambers <gchambers@provsol.com>
+
+	* faq.html: Add text about -fno-rtti.
+	Fix bogus close-tag left behind in my last edit.
+
 2000-01-06  Anthony Green  <green@cygnus.com>
 	
 	* build-snapshot.html: Install gcc and gcj in the same place.
