2000-01-18  Bryce McKinlay  <bryce@albatross.co.nz>
        * download.html: Add link to cvsweb.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-01-18  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* download.html: Add link to cvsweb.
+
 2000-01-06  Glenn Chambers <gchambers@provsol.com>
 
 	* faq.html: Add text about -fno-rtti.
