* papers/cni.sgml: Updated for -fno-rtti and #pragma implementation.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-01-19  Tom Tromey  <tromey@cygnus.com>
+
+	* papers/cni.sgml: Updated for -fno-rtti and #pragma implementation.
+
 2000-01-18  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* download.html: Add link to cvsweb.
