--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+Fri Feb 11 19:16:40 2000  Anthony Green  <green@cygnus.com>
+
+	* thanks.html: Updated.
+
 Fri Feb 11 15:21:15 2000  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* download.html: Fixed typo in last change. Grrr.
