* index.html: Forgot JNI.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2000-02-16  Tom Tromey  <tromey@cygnus.com>
 
+	* index.html: Forgot JNI.
+
 	* index.html: Mention some news.
 
 Fri Feb 11 19:16:40 2000  Anthony Green  <green@cygnus.com>
