* index.html: Link to the new faq. 	* faq-portugese.html: New file, from ivanfg@bigfoot.com.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,8 @@
 2000-02-16  Tom Tromey  <tromey@cygnus.com>
 
+	* index.html: Link to the new faq.
+	* faq-portugese.html: New file, from ivanfg@bigfoot.com.
+
 	* index.html: Forgot JNI.
 
 	* index.html: Mention some news.
