--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2000-02-16  Tom Tromey  <tromey@cygnus.com>
 
+	* index.html: Added missing <br>.
+
 	* index.html: Link to the new faq.
 	* faq-portugese.html: New file, from ivanfg@bigfoot.com.
 
