--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2000-02-16  Anthony Green  <green@cygnus.com>
+
+	* faq-portugese.html: Fix img links.  Point at english faq.
+	* faq.html: Point at faq-portugese.html.
+	* index.html: Removed faq-portugese link.
+
 2000-02-16  Tom Tromey  <tromey@cygnus.com>
 
 	* index.html: Added missing <br>.
