* index.html: Link to gdb.html. 	* gdb.html: New file.  From Matt Welsh.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-02-17  Tom Tromey  <tromey@cygnus.com>
+
+	* index.html: Link to gdb.html.
+	* gdb.html: New file.  From Matt Welsh.
+
 2000-02-16  Anthony Green  <green@cygnus.com>
 
 	* faq-portugese.html: Fix img links.  Point at english faq.
