--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-18  Tom Tromey  <tromey@cygnus.com>
+
+	* faq.html: Typos.
+
 2000-02-17  Tom Tromey  <tromey@cygnus.com>
 
 	* index.html: Link to gdb.html.
