--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-22  Tom Tromey  <tromey@cygnus.com>
+
+	* thanks.html: Mention Ivan Fontes Garcia.
+
 2000-02-18  Tom Tromey  <tromey@cygnus.com>
 
 	* faq.html: Typos.
