* index.html: Mention AG's class init optimization and Hans 	Boehm's IA-64 libffi port.
	* thanks.html: Mention Hans Boehm's IA-64 libffi port.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,10 @@
+2000-02-27  Tom Tromey  <tromey@cygnus.com>
+
+	* index.html: Mention AG's class init optimization and Hans
+	Boehm's IA-64 libffi port.
+
+	* thanks.html: Mention Hans Boehm's IA-64 libffi port.
+
 2000-02-22  Tom Tromey  <tromey@cygnus.com>
 
 	* thanks.html: Mention Ivan Fontes Garcia.
