--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-29  Tom Tromey  <tromey@cygnus.com>
+
+	* thanks.html: Mention Mo DeJong.
+
 2000-02-27  Tom Tromey  <tromey@cygnus.com>
 
 	* index.html: Mention AG's class init optimization and Hans
