2000-03-03  Bryce McKinlay  <bryce@albatross.co.nz>
        * faq.html: Update JNI information. Link to gdb.html.
        * FAQ.html: Remove obsolete FAQ, meta-refresh to faq.html.
        * gdb.html: Add <html>,<body>,<title> tags, etc. Mention that
        .gdbinit' can be in $HOME.
        * doc.html: Add link to gdb.html.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,11 @@
+2000-03-03  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* faq.html: Update JNI information. Link to gdb.html.
+	* FAQ.html: Remove obsolete FAQ, meta-refresh to faq.html.
+	* gdb.html: Add <html>,<body>,<title> tags, etc. Mention that 
+	`.gdbinit' can be in $HOME.
+	* doc.html: Add link to gdb.html.
+
 2000-03-02  Tom Tromey  <tromey@cygnus.com>
 
 	* index.html: Mention g++ change.
