2000-03-03  Bryce McKinlay  <bryce@albatross.co.nz>
        * faq.html: Fix some formatting issues.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,6 +1,7 @@
 2000-03-03  Bryce McKinlay  <bryce@albatross.co.nz>
 
-	* faq.html: Update JNI information. Link to gdb.html.
+	* faq.html: Update JNI information. Link to gdb.html. Fix some 
+	formatting issues.
 	* FAQ.html: Remove obsolete FAQ, meta-refresh to faq.html.
 	* gdb.html: Add <html>,<body>,<title> tags, etc. Mention that 
 	`.gdbinit' can be in $HOME.
