--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-03-06  Tom Tromey  <tromey@cygnus.com>
+
+	* index.html: Mention relicense.
+
 2000-03-03  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* faq.html: Update JNI information. Link to gdb.html. Fix some 
