--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,8 @@
 2000-03-06  Tom Tromey  <tromey@cygnus.com>
 
+	* papers/cni.sgml: Mention `gcj/cni.h', not just `cni.h'.
+	Updated for new exception handling.
+
 	* index.html: Mention relicense.
 
 2000-03-03  Bryce McKinlay  <bryce@albatross.co.nz>
