* papers/cni.sgml: Removed extra word.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2000-03-06  Tom Tromey  <tromey@cygnus.com>
 
+	* papers/cni.sgml: Removed extra word.
+
 	* papers/cni.sgml: Mention `gcj/cni.h', not just `cni.h'.
 	Updated for new exception handling.
 
