--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-03-07  Tom Tromey  <tromey@cygnus.com>
+
+	* index.html: Mention Bryce's patch.
+
 2000-03-06  Tom Tromey  <tromey@cygnus.com>
 
 	* papers/cni.sgml: Removed extra word.
