--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-03-09  Warren Levy  <warrenl@cygnus.com>
+
+	* faq.html (3_3 Can I configure/build in the source tree?): Added.
+
 2000-03-07  Tom Tromey  <tromey@cygnus.com>
 
 	* index.html: Mention Bryce's patch.
