--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,10 @@
 2000-03-09  Warren Levy  <warrenl@cygnus.com>
 
+	* faq.html (3_3 Can I configure/build in the source tree?): Cleaned
+	up typos and used clearer wording.
+
+2000-03-09  Warren Levy  <warrenl@cygnus.com>
+
 	* faq.html (3_3 Can I configure/build in the source tree?): Added.
 
 2000-03-07  Tom Tromey  <tromey@cygnus.com>
