* gdb.html: Mention page author.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-03-13  Tom Tromey  <tromey@cygnus.com>
+
+	* gdb.html: Mention page author.
+
 2000-03-09  Warren Levy  <warrenl@cygnus.com>
 
 	* index.html: Mention java.security.
