* index.html: Mention JDK 1.1 compiler changes.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2000-03-13  Tom Tromey  <tromey@cygnus.com>
 
+	* index.html: Mention JDK 1.1 compiler changes.
+
 	* Many files: Updated gcc URL.
 
 	* gdb.html: Mention page author.
