* index.html: Link to old-news.html. 	* old-news.html: New file.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-03-14  Tom Tromey  <tromey@cygnus.com>
+
+	* index.html: Link to old-news.html.
+	* old-news.html: New file.
+
 2000-03-13  Tom Tromey  <tromey@cygnus.com>
 
 	* index.html: Mention JDK 1.1 compiler changes.
