* libgcj2.html: Don't need --enable-java-gc for gcc.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2000-03-14  Tom Tromey  <tromey@cygnus.com>
 
+	* libgcj2.html: Don't need --enable-java-gc for gcc.
+
 	* index.html: Link to old-news.html.
 	* old-news.html: New file.
 
