--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,13 @@
+2000-03-14  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* faq.html: (2.8: What features of the Java language are/aren't
+	supported.): Update to reflect JDK 1.1 language feature support in the
+	compiler.
+
+	New entries from Joerg Brunsmann:
+	(1.7: Can I interface byte-compiled and native java code?)
+	(4.7: I'm getting 'gcj: libgcj.spec: No such file or directory')
+
 2000-03-14  Tom Tromey  <tromey@cygnus.com>
 
 	* libgcj2.html: Don't need --enable-java-gc for gcc.
