--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-03-15  Tom Tromey  <tromey@cygnus.com>
+
+	* index.html: Mention Windows port.
+
 2000-03-14  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* faq.html: (2.8: What features of the Java language are/aren't
