* download.html: Update from Matt Welsh.
	* index.html: Mention IA-64 port.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2000-03-26  Tom Tromey  <tromey@cygnus.com>
+
+	* download.html: Update from Matt Welsh.
+
+	* index.html: Mention IA-64 port.
+
 2000-03-15  Tom Tromey  <tromey@cygnus.com>
 
 	* index.html: Mention Windows port.
