2000-03-27  Glenn Chambers <gchambers@provsol.com>
	* faq.html: Remove bogus '-c' from gij shared library
	example

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-03-27  Glenn Chambers <gchambers@provsol.com>
+
+	* faq.html: Remove bogus '-c' from gij shared library
+	example
+
 2000-03-26  Tom Tromey  <tromey@cygnus.com>
 
 	* download.html: Update from Matt Welsh.
