2000-03-27  Bryce McKinlay  <bryce@albatross.co.nz>
        * port-threads.html: Update and clarify _Jv_CondWait,
        _Jv_ThreadInterrupt, _Jv_CondNotify and _Jv_CondNotifyAll
        specifications to reflect new return codes and semantics. Correct
        gthr-PORT.h to be PORT-threads.h.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,10 @@
+2000-03-27  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* port-threads.html: Update and clarify _Jv_CondWait,
+	_Jv_ThreadInterrupt, _Jv_CondNotify and _Jv_CondNotifyAll 
+	specifications to reflect new return codes and semantics. Correct
+	gthr-PORT.h to be PORT-threads.h.
+
 2000-03-27  Glenn Chambers <gchambers@provsol.com>
 
 	* faq.html: Remove bogus '-c' from gij shared library
