Roll back mistake in last change.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -2,8 +2,7 @@
 
 	* port-threads.html: Update and clarify _Jv_CondWait,
 	_Jv_ThreadInterrupt, _Jv_CondNotify and _Jv_CondNotifyAll 
-	specifications to reflect new return codes and semantics. Correct
-	gthr-PORT.h to be PORT-threads.h.
+	specifications to reflect new return codes and semantics. 
 
 2000-03-27  Glenn Chambers <gchambers@provsol.com>
 
