2000-03-29	Glenn Chambers <gchambers@provsol.com>
	* faq.html: Update license text for new GPL+libgcc-exception
	fix spello.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-03-29	Glenn Chambers <gchambers@provsol.com>
+
+	* faq.html: Update license text for new GPL+libgcc-exception
+	fix spello.
+
 2000-03-27  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* port-threads.html: Update and clarify _Jv_CondWait,
