--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-04-11  Tom Tromey  <tromey@cygnus.com>
+
+	* index.html: Mention java.sql, java.awt.event.
+
 2000-03-29	Glenn Chambers <gchambers@provsol.com>
 
 	* faq.html: Update license text for new GPL+libgcc-exception
