* download.html: Mention RPM.
	* index.html: Fixed ordering of items in news.  Added note about
	AG's RPMs.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,10 @@
 2000-04-11  Tom Tromey  <tromey@cygnus.com>
 
+	* download.html: Mention RPM.
+
+	* index.html: Fixed ordering of items in news.  Added note about
+	AG's RPMs.
+
 	* index.html: Mention java.sql, java.awt.event.
 
 2000-03-29	Glenn Chambers <gchambers@provsol.com>
