* index.html: Yet another ordering fix.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2000-04-11  Tom Tromey  <tromey@cygnus.com>
 
+	* index.html: Yet another ordering fix.
+
 	* download.html: Mention RPM.
 
 	* index.html: Fixed ordering of items in news.  Added note about
