* index.html: Fix typo and add a bit of formating.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-03-09  Warren Levy  <warrenl@cygnus.com>
+
+	* index.html: Fix typo and add a bit of formating.
+
 2000-04-11  Tom Tromey  <tromey@cygnus.com>
 
 	* index.html: Yet another ordering fix.
