Mention Red Hat.  Add projects page.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,25 @@
+2000-04-22  Anthony Green  <green@cygnus.com>
+
+	* projects.html: New file.
+
+	* gcj2.html: Mention Red Hat.
+	* tm.html: Ditto.
+	* about.html: Ditto.
+	* contrib.html: Ditto.
+	* contribute.html: Ditto.
+	* docs.html: Ditto.
+	* download.html: Ditto.
+	* faq.html: Ditto.
+	* index.html: Ditto.
+	* libgcj-assign.html: Ditto.
+	* mail.html: Ditto.
+	* support.html: Ditto.
+	* thanks.html: Ditto.
+
+	* faq.html: Changes are assigned to the FSF, not Cygnus or Red
+	Hat.
+	* faq-portugese.html: Refer to Red Hat.
+
 2000-03-09  Warren Levy  <warrenl@cygnus.com>
 
 	* index.html: Fix typo and add a bit of formating.
@@ -13,7 +35,7 @@
 
 	* index.html: Mention java.sql, java.awt.event.
 
-2000-03-29	Glenn Chambers <gchambers@provsol.com>
+2000-03-29 Glenn Chambers <gchambers@provsol.com>
 
 	* faq.html: Update license text for new GPL+libgcc-exception
 	fix spello.
