* projects.html: Mention a bunch of specific improvements.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-04-22  Tom Tromey  <tromey@cygnus.com>
+
+	* projects.html: Mention a bunch of specific improvements.
+
 2000-04-22  Anthony Green  <green@cygnus.com>
 
 	* projects.html: New file.
