Update jar and benchmark

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,12 @@
+2000-04-27  Anthony Green  <green@cygnus.com>
+
+	* projects.html: Update jar and benchmark projects.
+
+2000-04-23  Anthony Green  <green@cygnus.com>
+
+	* projects.html: Add static array construction.
+	Describe what to do with new project ideas.
+
 2000-04-22  Tom Tromey  <tromey@cygnus.com>
 
 	* projects.html: Mention a bunch of specific improvements.
