--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,10 @@
+Thu Apr 27 21:13:40 2000  Anthony Green  <green@cygnus.com>
+
+	* projects.html: Add compiler ideas from Per Bothner
+	<per@bothner.com>.
+
+	* index.html: Add news item pointing at projects page.
+
 2000-04-27  Anthony Green  <green@cygnus.com>
 
 	* projects.html: Update jar and benchmark projects.
