--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2000-04-28  Tom Tromey  <tromey@cygnus.com>
+
+	* projects.html: I wrote a patch to finish static primitive array
+	initialization.  Mention synchronization idea when doing
+	inlining.
+
 Thu Apr 27 21:13:40 2000  Anthony Green  <green@cygnus.com>
 
 	* projects.html: Add compiler ideas from Per Bothner
