* index.html: Mention JNI stubs.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-02  Tom Tromey  <tromey@cygnus.com>
+
+	* index.html: Mention JNI stubs.
+
 2000-04-28  Tom Tromey  <tromey@cygnus.com>
 
 	* projects.html: I wrote a patch to finish static primitive array
