--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2000-05-02  Tom Tromey  <tromey@cygnus.com>
 
+	* projects.html: Mention resources.
+
 	* index.html: Mention JNI stubs.
 
 2000-04-28  Tom Tromey  <tromey@cygnus.com>
