* index.html: Bug fix.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2000-05-02  Tom Tromey  <tromey@cygnus.com>
 
+	* index.html: Bug fix.
+
 	* projects.html: Mention resources.
 
 	* index.html: Mention JNI stubs.
