* old-news.html: Added new old news. 	* index.html: Mention today's commit.  Removed old news.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-19  Tom Tromey  <tromey@cygnus.com>
+
+	* old-news.html: Added new old news.
+	* index.html: Mention today's commit.  Removed old news.
+
 2000-05-02  Tom Tromey  <tromey@cygnus.com>
 
 	* index.html: Bug fix.
