* merge-status.html: New file.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2000-05-19  Tom Tromey  <tromey@cygnus.com>
 
+	* merge-status.html: New file.
+
 	* old-news.html: Added new old news.
 	* index.html: Mention today's commit.  Removed old news.
 
