* merge-status.html: Merged java.io.BufferedOutputStream, 	java.io.BufferedWriter.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,8 @@
 2000-05-19  Tom Tromey  <tromey@cygnus.com>
 
+	* merge-status.html: Merged java.io.BufferedOutputStream,
+	java.io.BufferedWriter.
+
 	* merge-status.html: New file.
 
 	* old-news.html: Added new old news.
