* merge-status.html: Mark java.io.PipedReader, 	java.io.PipedWriter, java.io.PipedInputStream, 	java.io.PipedOutputStream as merged.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,9 @@
 2000-05-19  Tom Tromey  <tromey@cygnus.com>
 
+	* merge-status.html: Mark java.io.PipedReader,
+	java.io.PipedWriter, java.io.PipedInputStream,
+	java.io.PipedOutputStream as merged.
+
 	* merge-status.html: Merged java.io.BufferedOutputStream,
 	java.io.BufferedWriter.
 
