2000-06-06  Bryce McKinlay  <bryce@albatross.co.nz>
	* faq.html (5.7: I'm getting 'undefined symbol: __dso_handle'):
	New answer.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-06  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* faq.html (5.7: I'm getting 'undefined symbol: __dso_handle'): 
+	New answer.
+
 Thu Jun  1 10:13:26 2000  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* contrib.html: Added info on how to contribute test cases.
