2000-06-07  Bryce McKinlay  <bryce@albatross.co.nz>
	* faq.html (3.4): New Answer.
	(2.7): Updated.
	(4.2): Clarify inner class support.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2000-06-07  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* faq.html (3.4): New Answer.
+	(2.7): Updated.
+	(4.2): Clarify inner class support.
+
 2000-06-06  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* faq.html (5.7: I'm getting 'undefined symbol: __dso_handle'): 
