* faq.html: Typo.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-21  Tom Tromey  <tromey@cygnus.com>
+
+	* faq.html: Typo.
+
 2000-06-07  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* faq.html (3.4): New Answer.
