--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2000-06-21  Tom Tromey  <tromey@cygnus.com>
 
+	* merge-status.html: Bryce merged ThreadGroup.
+
 	* faq.html: Typo.
 
 2000-06-07  Bryce McKinlay  <bryce@albatross.co.nz>
