2000-06-25  Bryce McKinlay  <bryce@albatross.co.nz>
	* download.html: Update the URLs for GCC releases and snapshots.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-25  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* download.html: Update the URLs for GCC releases and snapshots.
+
 2000-06-21  Tom Tromey  <tromey@cygnus.com>
 
 	* merge-status.html: Bryce merged ThreadGroup.
