2000-06-27  Alexandre Petit-Bianco  <apbianco@cygnus.com>
        * done.html: New file.
        * about.html: Added link to the `Done with Gcj' page.
        * contrib.html: Likewise.
        * docs.html: Likewise.
        * download.html: Likewise.
        * faq-portugese.html: Likewise.
        * faq.html: Likewise.
        * index.html: Likewise. Added new `GCJ News' item.
        * mail.html: Added link to the `Done with Gcj' page.
        * projects.html: Likewise.
        * support.html: Likewise.
        * thanks.html: Likewise.
        * tm.html: Likewise.

(Add a `Done with gcj' section.)

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,19 @@
+2000-06-27  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* done.html: New file.
+	* about.html: Added link to the `Done with Gcj' page.
+	* contrib.html: Likewise.
+	* docs.html: Likewise.
+	* download.html: Likewise.
+	* faq-portugese.html: Likewise. 
+	* faq.html: Likewise.
+	* index.html: Likewise. Added new `GCJ News' item.
+	* mail.html: Added link to the `Done with Gcj' page.
+	* projects.html: Likewise.
+	* support.html: Likewise.
+	* thanks.html: Likewise.
+	* tm.html: Likewise.
+
 2000-06-25  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* download.html: Update the URLs for GCC releases and snapshots.
