* done.html: Added note about PAL.
	* mail.html: Added java-cvs.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2000-07-19  Tom Tromey  <tromey@cygnus.com>
+
+	* done.html: Added note about PAL.
+
+	* mail.html: Added java-cvs.
+
 Wed Jun 28 19:42:41 2000  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* done.html: Added Swarm entry.
