* done.html: Fix missing tag.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-20  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* done.html: Fix missing tag.
+
 2000-07-19  Tom Tromey  <tromey@cygnus.com>
 
 	* done.html: Added note about PAL.
