--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-03  Tom Tromey  <tromey@cygnus.com>
+
+	* index.html: Added news item about gnome-gcj.
+
 2000-07-20  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* done.html: Fix missing tag.
