--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-20  Tom Tromey  <tromey@cygnus.com>
+
+	* index.html: Mention happenings.
+
 Sun Aug 13 20:09:37 2000  Anthony Green  <green@redhat.com>
 
 	* thanks.html: More thanks.
