* build-snapshot.html: Add instructions for building from CVS.     Add reminder to build c++ compiler. Mention __dso_handle problem.     * download.html: Mention prebuild RPMs more prominently. Add pointers     for building from source and to gcc cvs access instructions. Add an     entry describing the gcj/libgcj combination that worked for me.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,11 @@
+2000-08-27  Mark Wielaard  <mark@klomp.org>
+ 
+	* build-snapshot.html: Add instructions for building from CVS.
+	Add reminder to build c++ compiler. Mention __dso_handle problem.
+	* download.html: Mention prebuild RPMs more prominently. Add pointers
+	for building from source and to gcc cvs access instructions. Add an
+	entry describing the gcj/libgcj combination that worked for me.
+
 2000-08-20  Tom Tromey  <tromey@cygnus.com>
 
 	* index.html: Mention happenings.
