--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-06  Tom Tromey  <tromey@cygnus.com>
+
+	* index.html: Mention AG's zlib change.
+
 2000-08-27  Mark Wielaard  <mark@klomp.org>
  
 	* build-snapshot.html: Add instructions for building from CVS.
