--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-08  Warren Levy  <warrenl@cygnus.com>
+
+	* index.html: Added note about increased serialization compatibility.
+
 2000-09-06  Tom Tromey  <tromey@cygnus.com>
 
 	* index.html: Mention AG's zlib change.
