--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-10-04  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* index.html, old-news.html: Move older news entries to old-news.html.
+
 2000-09-30  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* index.html: Add note about GC bitmap marking.
