--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-10-17  Mark Wielaard  <mark@klomp.org>
+
+    * build-snapshot.html: Add --enable-libstdcxx-v3
+    * faq.html: Mention the iconv bug and workaround 
+
 2000-10-04  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* index.html, old-news.html: Move older news entries to old-news.html.
