* index.html: Added info about latest work.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-10-29  Tom Tromey  <tromey@cygnus.com>
+
+	* index.html: Added info about latest work.
+
 2000-10-17  Mark Wielaard  <mark@klomp.org>
 
     * build-snapshot.html: Add --enable-libstdcxx-v3
