* contrib.html: Mention coding style.  Text from Bryce.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2000-10-29  Tom Tromey  <tromey@cygnus.com>
 
+	* contrib.html: Mention coding style.  Text from Bryce.
+
 	* contrib.html: Mention commits and Gnats.
 
 	* index.html: Added info about latest work.
