* projects.html: Updated for work on the jar project.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2000-10-29  Tom Tromey  <tromey@cygnus.com>
 
+	* projects.html: Updated for work on the jar project.
+
 	* contrib.html: Mention coding style.  Text from Bryce.
 
 	* contrib.html: Mention commits and Gnats.
