* faq.html: Update for bitmap marking, iconv bug fixes.  Typo 	fix.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-11-02  Tom Tromey  <tromey@cygnus.com>
+
+	* faq.html: Update for bitmap marking, iconv bug fixes.  Typo
+	fix.
+
 2000-10-29  Tom Tromey  <tromey@cygnus.com>
 
 	* projects.html: Updated for work on the jar project.
