* index.html: Added note about serialization dumper.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-02  Warren Levy  <warrenl@cygnus.com>
+
+	* index.html: Added note about serialization dumper.
+
 2000-11-02  Tom Tromey  <tromey@cygnus.com>
 
 	* faq.html: Update for bitmap marking, iconv bug fixes.  Typo
