2000-11-16  Phil Edwards  <pme@sources.redhat.com>
	* header.ihtml:  Move main body tags out of here...
	* footer.ihtml:  ...and here...
	* documentation.html:  ...into here,
	* download.html:  and here,
	* index.html:  and here,
	* links.html:  and here,
	* mail.html:  and here,
	* status.html:  and here,
	* thanks.html:  and here.
	* faq/index.html:  Update for v3-is-the-default and 2.91 snapshot.
	* faq/index.txt:  Regenerated.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,5 +1,19 @@
 2000-11-16  Phil Edwards  <pme@sources.redhat.com>
 
+	* header.ihtml:  Move main body tags out of here...
+	* footer.ihtml:  ...and here...
+	* documentation.html:  ...into here,
+	* download.html:  and here,
+	* index.html:  and here,
+	* links.html:  and here,
+	* mail.html:  and here,
+	* status.html:  and here,
+	* thanks.html:  and here.
+	* faq/index.html:  Update for v3-is-the-default and 2.91 snapshot.
+	* faq/index.txt:  Regenerated.
+
+2000-11-16  Phil Edwards  <pme@sources.redhat.com>
+
 	* Makefile:  New file, just rebuilds the text form of the FAQ
 	  using suggestion from Joseph S. Myers.
 	* ChangeLog:  New file.
