2000-11-17  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
	* header.ihtml: Remove "Report a Bug" link from navigation bar.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-17  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* header.ihtml: Remove "Report a Bug" link from navigation bar.
+
 2000-11-16  Phil Edwards  <pme@sources.redhat.com>
 
 	* header.ihtml:  Move main body tags out of here...
