--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,8 @@
+2000-11-18  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* header.ihtml: Fix markup error in bgcolor attribute. Remove
+	blank lines and a disabled form.
+
 2000-11-17  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* header.ihtml: Remove "Report a Bug" link from navigation bar.
