* documentation.html, download.html, index.html, links.html, 	status.html, faq/index.html:  Markup fixes: <UL> cannot be embedded 	within <P>...</P>; logical markup instead of physical; missing tags.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,9 @@
+2000-11-19  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* documentation.html, download.html, index.html, links.html,
+	status.html, faq/index.html:  Markup fixes: <UL> cannot be embedded
+	within <P>...</P>; logical markup instead of physical; missing tags.
+
 2000-11-18  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* header.ihtml: Fix markup error in bgcolor attribute. Remove
