* faq/index.html:  Fix markup. 	* faq/index.txt:  Regenerated.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,5 +1,10 @@
 2000-11-19  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
+	* faq/index.html:  Fix markup.
+	* faq/index.txt:  Regenerated.
+
+2000-11-19  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+	
 	* documentation.html, download.html, index.html, links.html,
 	status.html, faq/index.html:  Markup fixes: <UL> cannot be embedded
 	within <P>...</P>; logical markup instead of physical; missing tags.
