2000-11-20  Phil Edwards  <pme@sources.redhat.com>
	* faq/index.html:  Add #4_4_interface tag describing the includedir
	  misunderstandings (g++-3 vs g++-v3) and a link to the solution
	  under discussion.
	* faq/index.txt:  Rebuilt.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,10 @@
+2000-11-20  Phil Edwards  <pme@sources.redhat.com>
+
+	* faq/index.html:  Add #4_4_interface tag describing the includedir
+	  misunderstandings (g++-3 vs g++-v3) and a link to the solution
+	  under discussion.
+	* faq/index.txt:  Rebuilt.
+
 2000-11-19  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* faq/index.html:  Fix markup.
