* mail.html: Mark the libstdc++-prs list as historical and remove 	move references. Remove reference to sourceware.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,8 @@
+2000-11-26  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* mail.html: Mark the libstdc++-prs list as historical and remove
+	move references. Remove reference to sourceware.
+
 2000-11-20  Phil Edwards  <pme@sources.redhat.com>
 
 	* faq/index.html:  Add #4_4_interface tag describing the includedir
