2000-11-28  Alexandre Petit-Bianco  <apbianco@cygnus.com>
	* done.html (Autonomous Haulage): Fixed indentation.
	(jUSB, jPhoto): New entry.
	(Pal): Fixed indentation.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2000-11-28  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* done.html (Autonomous Haulage): Fixed indentation.
+	(jUSB, jPhoto): New entry.
+	(Pal): Fixed indentation.
+
 2000-11-02  Warren Levy  <warrenl@cygnus.com>
 
 	* index.html: Added note about serialization dumper.
