--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-29  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* done.html(jUSB, jPhoto): Removed erroneous mention of C/C++.
+
 2000-11-28  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* done.html (Autonomous Haulage): Fixed indentation.
