2000-11-29  Phil Edwards  <pme@sources.redhat.com>
	* status.html:  Update for 2.91.
	* 17_intro/RELEASE-NOTES:  Likewise.
	* faq/index.html:  Likewise.
	* faq/index.txt:  Regenerated.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,10 @@
+2000-11-29  Phil Edwards  <pme@sources.redhat.com>
+
+	* status.html:  Update for 2.91.
+	* 17_intro/RELEASE-NOTES:  Likewise.
+	* faq/index.html:  Likewise.
+	* faq/index.txt:  Regenerated.
+
 2000-11-26  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* mail.html: Mark the libstdc++-prs list as historical and remove
