2000-11-29  Phil Edwards  <pme@sources.redhat.com>
	* index.html:  Rather than overloading one machine, point the
	  snapshot-getters to the list of mirrors.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,5 +1,10 @@
 2000-11-29  Phil Edwards  <pme@sources.redhat.com>
 
+	* index.html:  Rather than overloading one machine, point the
+	  snapshot-getters to the list of mirrors.
+
+2000-11-29  Phil Edwards  <pme@sources.redhat.com>
+
 	* status.html:  Update for 2.91.
 	* 17_intro/RELEASE-NOTES:  Likewise.
 	* faq/index.html:  Likewise.
