* download.html: Comment out "development tree status" misinformation. 	Add information about Red Hat 7's RPMs.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-11-30  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* download.html: Comment out "development tree status" misinformation.
+	Add information about Red Hat 7's RPMs.
+
 2000-11-29  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* done.html(jUSB, jPhoto): Removed erroneous mention of C/C++.
