* faq.html (2.4): Update AWT status.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -2,6 +2,7 @@
 
 	* download.html: Comment out "development tree status" misinformation.
 	Add information about Red Hat 7's RPMs.
+	* faq.html (2.4): Update AWT status.
 
 2000-11-29  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
