* mail.html: Remove; lists now on mail GCC lists page. 	* .htaccess: New; redirect /libstdc++/mail.html to 	http://gcc.gnu.org/lists.html. 	* header.ihtml: Link to ../lists.html instead of mail.html.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,10 @@
+2000-12-01  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* mail.html: Remove; lists now on mail GCC lists page.
+	* .htaccess: New; redirect /libstdc++/mail.html to
+	http://gcc.gnu.org/lists.html.
+	* header.ihtml: Link to ../lists.html instead of mail.html.
+
 2000-11-29  Phil Edwards  <pme@sources.redhat.com>
 
 	* index.html:  Rather than overloading one machine, point the
