Change sourceware.cygnus.com to sources.redhat.com.
In connection with libstdc++, change sources.redhat.com to
gcc.gnu.org.  Consequentially, make some links relative.

Remove LINK REL="home".

Other minor cleanups.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,18 @@
+2000-12-03  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* configopts.html, documentation.html, download.html, index.html,
+	install.html, links.html, status.html, thanks.html,
+	17_intro/BADNAMES, 17_intro/contribute.html, 17_intro/howto.html,
+	18_support/howto.html, 19_diagnostics/howto.html,
+	20_util/howto.html, 21_strings/howto.html, 22_locale/howto.html,
+	23_containers/howto.html, 24_iterators/howto.html,
+	25_algorithms/howto.html, 26_numerics/howto.html,
+	27_io/howto.html, ext/howto.html, faq/index.html: Change
+	sources.redhat.com to gcc.gnu.org, and don't use LINK REL="home".
+	Refer to directories instead of index.html.  Use <CODE> instead of
+	<TT>.
+	* faq/index.txt: Regenerate.
+
 2000-12-01  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* mail.html: Remove; lists now on mail GCC lists page.
