2000-12-03  Phil Edwards  <pme@sources.redhat.com>
	* footer.ihtml:  Remove text blurb.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-03  Phil Edwards  <pme@sources.redhat.com>
+
+	* footer.ihtml:  Remove text blurb.
+
 2000-12-03  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* configopts.html, documentation.html, download.html, index.html,
