2000-12-08  Alexandre Petit-Bianco  <apbianco@cygnus.com>
	* index.html: Mention libgcj migration.

(http://sources.redhat.com/ml/java-patches/2000-q4/msg00214.html)

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-08  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* index.html: Mention libgcj migration.
+
 2000-11-30  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* download.html: Comment out "development tree status" misinformation.
