2000-12-10  Phil Edwards  <pme@sources.redhat.com>
	* Makefile:  Removed as part of discussed and approved duplication
	  removal.
	* configopts.html:  Likewise.
	* documentation.html:  Likewise.
	* install.html:  Likewise.
	* header.ihtml:  Point to new documentation.html.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,12 @@
+2000-12-10  Phil Edwards  <pme@sources.redhat.com>
+
+	* Makefile:  Removed as part of discussed and approved duplication
+	  removal.
+	* configopts.html:  Likewise.
+	* documentation.html:  Likewise.
+	* install.html:  Likewise.
+	* header.ihtml:  Point to new documentation.html.
+
 2000-12-03  Phil Edwards  <pme@sources.redhat.com>
 
 	* footer.ihtml:  Remove text blurb.
