Mention interpreter for Alpha

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-09  Anthony Green  <green@cygnus.com>
+
+	* index.html: Mention interpreter for Alpha systems.
+
 2000-12-08  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* index.html: Mention libgcj migration.
