--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -2,6 +2,10 @@
 
 	* index.html: Mention interpreter for Alpha systems.
 
+2000-12-09  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* index.html: The libgcj sources migration is a fait accompli.
+
 2000-12-08  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* index.html: Mention libgcj migration.
