2000-12-10  Phil Edwards  <pme@sources.redhat.com>
	* 17_intro, 18_support, 19_diagnostics, 20_util, 21_strings,
	  22_locale, 23_containers, 24_iterators, 25_algorithms, 26_numerics,
	  27_io, ext, faq:  Directories emptied of files; last part of V3
	  documentation shuffle.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,5 +1,12 @@
 2000-12-10  Phil Edwards  <pme@sources.redhat.com>
 
+	* 17_intro, 18_support, 19_diagnostics, 20_util, 21_strings,
+	  22_locale, 23_containers, 24_iterators, 25_algorithms, 26_numerics,
+	  27_io, ext, faq:  Directories emptied of files; last part of V3
+	  documentation shuffle.
+
+2000-12-10  Phil Edwards  <pme@sources.redhat.com>
+
 	* Makefile:  Removed as part of discussed and approved duplication
 	  removal.
 	* configopts.html:  Likewise.
