--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,5 +1,9 @@
 2000-12-10  Phil Edwards  <pme@sources.redhat.com>
 
+	* header.ihtml:  Missed the change in FAQ location.  Fixed.
+
+2000-12-10  Phil Edwards  <pme@sources.redhat.com>
+
 	* 17_intro, 18_support, 19_diagnostics, 20_util, 21_strings,
 	  22_locale, 23_containers, 24_iterators, 25_algorithms, 26_numerics,
 	  27_io, ext, faq:  Directories emptied of files; last part of V3
