2000-12-11  Phil Edwards  <pme@sources.redhat.com>
	* status.html:  Update with new results and links.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-11  Phil Edwards  <pme@sources.redhat.com>
+
+	* status.html:  Update with new results and links.
+
 2000-12-10  Phil Edwards  <pme@sources.redhat.com>
 
 	* header.ihtml:  Missed the change in FAQ location.  Fixed.
