2000-12-12  Alexandre Petit-Bianco  <apbianco@cygnus.com>
	* build-snapshot.html: Reorganized to account for the unified tree.
	* download.html: Mention unified tree. Snapshots, cvs and cvs web
	access info modified.
	* faq.html (1_4): Libgcj is part of gcc.
	(4_7): Removed
	* index.html: Fastjar replaces zip.

(http://sources.redhat.com/ml/java-patches/2000-q4/msg00242.html)

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,12 @@
+2000-12-12  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* build-snapshot.html: Reorganized to account for the unified tree.
+	* download.html: Mention unified tree. Snapshots, cvs and cvs web
+	access info modified.
+	* faq.html (1_4): Libgcj is part of gcc. 
+	(4_7): Removed
+	* index.html: Fastjar replaces zip.
+
 2000-12-09  Anthony Green  <green@cygnus.com>
 
 	* index.html: Mention interpreter for Alpha systems.
