* build-snapshot.html: Mention more specifics on activating libgcj 	regarding noconfigdirs in the toplevel configure.in. 	* index.html: Added a Build link. 	* about.html: Ditto. 	* contrib.html: Ditto. 	* docs.html: Ditto. 	* done.html: Ditto. 	* download.html: Ditto. 	* faq-portugese.html: Ditto. 	* faq.html: Ditto. 	* mail.html: Ditto. 	* projects.html: Ditto. 	* support.html: Ditto. 	* thanks.html: Ditto. 	* tm.html: Ditto.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,21 @@
+2000-12-18  Warren Levy  <warrenl@cygnus.com>
+
+	* build-snapshot.html: Mention more specifics on activating libgcj
+	regarding noconfigdirs in the toplevel configure.in.
+	* index.html: Added a Build link.
+	* about.html: Ditto.
+	* contrib.html: Ditto.
+	* docs.html: Ditto.
+	* done.html: Ditto.
+	* download.html: Ditto.
+	* faq-portugese.html: Ditto.
+	* faq.html: Ditto.
+	* mail.html: Ditto.
+	* projects.html: Ditto.
+	* support.html: Ditto.
+	* thanks.html: Ditto.
+	* tm.html: Ditto.
+
 2000-12-12  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* build-snapshot.html: Reorganized to account for the unified tree.
