* build-snapshot.html: Made changes suggested by Per.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-31  Tom Tromey  <tromey@redhat.com>
+
+	* build-snapshot.html: Made changes suggested by Per.
+
 2000-12-18  Warren Levy  <warrenl@cygnus.com>
 
 	* build-snapshot.html: Mention more specifics on activating libgcj
