--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,10 @@
+2001-01-02  Warren Levy  <warrenl@redhat.com>
+
+	* gcj2.html: Cleanup and point to build-snapshot.html as
+	suggested by Immanuel, Gidado-Yisa" <avm3@cdc.gov>.
+	* libgcj2.html: Cleanup and removed vestigial library build
+	instructions.
+
 2000-12-31  Tom Tromey  <tromey@redhat.com>
 
 	* build-snapshot.html: Made changes suggested by Per.
