2001-01-09  Alexandre Petit-Bianco  <apbianco@cygnus.com>
        * done.html (Tamanoir): New entry.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-01-09  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* done.html (Tamanoir): New entry.
+
 2001-01-02  Warren Levy  <warrenl@redhat.com>
 
 	* gcj2.html: Cleanup and point to build-snapshot.html as
